fix:text align in cells

--- a/src/table/Table.scss
+++ b/src/table/Table.scss
@@ -17,15 +17,17 @@
   margin: auto;
   border-collapse: collapse;
   border-spacing: 0;
-  text-align: center;
+  text-align: left;
+  vertical-align: middle;
 }
+
 .table-wrap {
   position: relative;
 }
 .table-scroll th,
 .table-scroll td {
   padding: 5px 10px;
-  vertical-align: top;
+  vertical-align: middle;
   min-width: 210px;
   width: 210px;
 }
